Fix alignmnet for shiftdown

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,5 +23,6 @@ code {
 
 div.shiftdown{
    display: flex;
+   justify-content: center;
    flex-direction: row;
 }
